# rrwidget

./: Cargo.toml  README.md
scripts/: toggle-widget.sh
src/: dbus.rs  main.rs  structs.rs  www.rs
