[package]
name = "rrwidget"
license = "MIT"
version = "0.1.0"
edition = "2021"

[dependencies]
async-channel = "2.3.1"
base64 = "0.22.1"
confy = "0.6.1"
gtk = { version = "0.9.2", package = "gtk4", features = ["v4_16"] }
html-escape = "0.2.13"
lru = "0.12.5"
serde = { version = "1", features = ["derive"] }
time-humanize = "0.1.3"
ureq = { version = "2.10.1", features = ["tls", "native-certs", "json", "gzip"] }
zbus = "5.0.1"
